# BML_Project

./: .project  README.md
Matlab/Calibration of IMU Cyberglove/: FindCoordinate.m  OS_real_elbow2_badIC.mat  OneSeg_real_elbow.m  OneSeg_real_elbow2.m  OneSeg_real_elbow3.m  OneSeg_real_shoulder.m  OneSeg_real_shoulder2.m  OneSeg_stage1.m  OneSeg_stage2.m  OneSeg_stage2_aug.m  debugData.mat
Matlab/Calibration of IMU Cyberglove/Tool/: angvec2q.m  gradFun.m  measurement.m  motionPlot.m  q2angvec.m  quatPlot.m  r2q.m  residual.m  rotAngle2angvec.m
Python/: SCAT.py  jointAxis_server.py  myLibrary.py  tt.py
Tree_and_Ensemble/: Tree_and_Ensemble.ipynb
data/: JointVals_rieman_backup.csv
data/Data1/: synDataFile_arm_backup.csv  synDataFile_base_backup.csv  synDataFile_forearm_backup.csv
data/Data2/: synDataFile_arm_base.csv  synDataFile_forearm_arm_backup.csv
data/Data3/: synDataFile_arm_base.csv  synDataFile_arm_forearm.csv
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/biotac_sensors/: BioTacData.h  BioTacHand.h  BioTacTime.h
devel/include/wam_msgs/: BHandFingerPos.h  BHandFingerPosRequest.h  BHandFingerPosResponse.h  BHandFingerVel.h  BHandFingerVelRequest.h  BHandFingerVelResponse.h  BHandGraspPos.h  BHandGraspPosRequest.h  BHandGraspPosResponse.h  BHandGraspVel.h  BHandGraspVelRequest.h  BHandGraspVelResponse.h  BHandSpreadPos.h  BHandSpreadPosRequest.h  BHandSpreadPosResponse.h  BHandSpreadVel.h  BHandSpreadVelRequest.h  BHandSpreadVelResponse.h  CartPosMove.h  CartPosMoveRequest.h  CartPosMoveResponse.h  Hold.h  (+39 more)
install/: _setup_util.py  setup.sh
src/: .rosinstall.bak
src/wam_description/: README.md  manifest.xml
src/wam_moveit_generated/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  README.md
src/wam_moveit_generated/config/: joint_limits.yaml
src/wam_moveit_generated/launch/: demo.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  wam_move_clup.launch  wam_move_edge_trainer.launch  wam_move_interface_test.launch  wam_move_qlearner.launch  wam_moveit_contorller_manager.launch
src/wam_moveit_generated/src/: FileInfo (copy).txt  FileInfo.txt  biomechHelper.h  wam_move_clup.cpp  wam_move_edge_trainer.cpp  wam_move_interface_test.cpp  wam_move_msgs_tester.cpp  wam_move_qlearner.cpp
src/wam_robot/: README.md
(+263 files in other folders)
